# rusthop

./: Cargo.toml  LICENSE  README.md
src/: application.rs  domain.rs  http.rs  id.rs  infra_memory.rs  lib.rs  main.rs  ports.rs
src/adapters/inbound/: http.rs
src/adapters/outbound/: in_memory.rs
src/application/: shortener.rs
src/domain/: entities.rs  errors.rs
tests/: common.rs  create.rs  info.rs  redirect.rs
