[package]
name = "rusthop"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "serde",
] }
thiserror = "2.0.12"
url = "2.5.4"
async-trait = "0.1.88"
anyhow = "1.0.98"
nanoid = "0.4"
